--- a/stockwise/package.json
+++ b/stockwise/package.json
@@ -16,6 +16,7 @@
     "datatables.net-dt": "^2.2.2",
     "jquery": "^3.7.1",
     "pinia": "^3.0.1",
+    "sweetalert2": "^11.17.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "vue3-easy-data-table": "^1.5.47"
